	Fixed libldap GnuTLS hang on socket close (ITS#6673)
	Fixed libldap sasl partial write handling (ITS#6639)
	Fixed libldap referral chasing (ITS#6602)
	Fixed libldap url parsing with NULL host (ITS#6653)
	Fixed liblutil getpass prompts (ITS#6702)
	Fixed ldapsearch segfault with deref (ITS#6638)
	Fixed slapd acl parsing overflow (ITS#6611)
	Fixed slapd config leak with olcDbDirectory (ITS#6634)
	Fixed slapd filter leak (ITS#6635)
	Fixed slapd when first acl is value dependent (ITS#6693)
	Fixed slapd modify to return actual error (ITS#6581)
	Fixed slapd sortvals of attributes with 1 value (ITS#6715)
	Fixed slapd syncrepl reuse of presence list (ITS#6707)
	Fixed slapd-bdb entry cache delete failure (ITS#6577)
	Fixed slapd-bdb error propogation to overlays (ITS#6633)
	Fixed slapd-ldap debug output of timeout (ITS#6721)
	Fixed slapd-ldap DNSSRV referral chaining (ITS#6565)
	Fixed slapd-ndb to honor rootpw setting (ITS#6661)
	Fixed slapd-meta anon retry with failed auth method (ITS#6643)
	Fixed slapd-meta rebind proc (ITS#6665)
	Fixed slapd-meta to correctly rebind as user (ITS#6574)
	Fixed slapd-sql with null objectClass (ITS#6616)
	Fixed slapo-pcache callback freeing (ITS#6640)
	Fixed slapo-pcache to ignore undefined attrs (ITS#6600)
	Fixed slapo-ppolicy don't update opattrs on consumers (ITS#6608)
	Fixed slapo-sssvlv initialization (ITS#6649)
	Fixed slapo-syncprov to send error if consumer is newer (ITS#6606)
	Fixed slapo-syncprov filter race condition (ITS#6708)
	Fixed slapo-syncprov active mod race (ITS#6709)
	Fixed contrib/autogroup LDAP URI with attribute filter (ITS#6536)
	Fixed contrib/nssov to only close socket on shutdown (ITS#6676)
	Fixed contrib/nssov multi platform support (ITS#6604)
	Build Environment
		Added support for [unsigned] long long (ITS#6622)
		Fixed slapd-tester EOF handling (ITS#6723)
		Fixed slapd-tesster filter initialization (ITS#6735)
	Documentation
		admin24 guide typo fixes (ITS#6609)